# murnaghan-nakayama

./: README.md  murnaghan_nakayama.py  performance_test.py  test.py
cpp/: CMakeLists.txt  lib.h  main.cpp  partitions.h  performance.h  test.cpp
jacobi-trudi/: CMakeLists.txt  README.md  main.cpp
maple/: SF2.4v.txt  SF_test.mw
murnaghan-nakayama-rule/: README.md
murnaghan-nakayama-rule/cpp/: CMakeLists.txt  lib.h  main.cpp  performance.h  test.cpp
murnaghan-nakayama-rule/python/: performance.py
python/: lib.py  performance.py  test.py
sage/: AttackingGraphs.ipynb  CharacterTable.ipynb  cache.sage  gs.sage  test_zonal.sage
